Thu Mar  6 08:30:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_mod_freeze): call rb_class_name() directly.
	  [ruby-core:15802]

Thu Mar  6 04:32:06 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (count_utf8_lead_bytes_with_ulong): fix shift size.
	  [ruby-dev:33993]

	* string.c (str_utf8_nth) fix wrong counting.

Thu Mar  6 00:34:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): size_t returned from strlen() can be
	  unsigned.

Thu Mar  6 00:31:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (make_struct): preserve encoding of struct name.

Wed Mar  5 22:49:20 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (is_utf8_lead_byte, count_utf8_lead_bytes_with_ulong):
	  defined for UTF-8 optimization.

	* string.c (str_strlen): use is_utf8_lead_byte and
	  count_utf8_lead_bytes_with_ulong.

	* string.c (str_utf8_nth) ditto.

Wed Mar  5 17:53:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_flock): returns false on EAGAIN if non-blocking.
	  [ruby-core:15795]

Wed Mar  5 17:43:43 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* transcode.c (transcode_loop): Adjusted detection of invalid
	  (ill-formed) UTF-8 sequences. Fixing potential security issue, see
	  http://www.unicode.org/versions/Unicode5.1.0/#Notable_Changes.

	* test/ruby/test_transcode.rb: Added two tests for above fix.

Wed Mar  5 14:00:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_to_s): avoid rb_scan_args() when no argument
	  given. 
	* bignum.c (rb_big_to_s): ditto.
	* enum.c (enum_first): ditto.
	* eval_jump.c (rb_f_catch): ditto.
	* io.c (rb_obj_display): ditto.
	* class.c (rb_obj_singleton_methods): ditto.
	* object.c (rb_class_initialize): ditto.
	* random.c (rb_f_srand): ditto.
	* range.c (range_step): ditto.
	* re.c (rb_reg_s_last_match): ditto.
	* string.c (rb_str_to_i): ditto.
	* string.c (rb_str_each_line): ditto.
	* string.c (rb_str_chomp_bang): ditto.