@@ -1,3 +1,7 @@
+Thu Mar  6 11:12:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* sprintf.c (rb_str_format): no need of loop.
+
 Thu Mar  6 08:30:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* object.c (rb_mod_freeze): call rb_class_name() directly.
